--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title id="title"><h1>Fork Me! FCC: Test Suite Template</h1></title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<h1>Hello World, we are software developers!</h1>
+    <h1>Hello World, we are software developers!</h1>
+    <p id="description">Short description as required</p>
     <!--
 
     Hello Camper!
