created a form field and name input

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     - The freeCodeCamp Team
 
     -->
+    <form id="survey-form">
+      Name<p></p>
+      <input id="name" type="text" value="Enter your name">
+    </form>
     <script  src="js/index.js"></script>
   </body>
 </html>
