--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
     -->
     <form id="survey-form">
-      Name<p></p>
+      <p>Name</p>
       <input id="name" type="text" value="Enter your name">
+      <p>Email</p>
+      <input id="email" type="email" value=>
+
     </form>
     <script  src="js/index.js"></script>
   </body>
